--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "lobster-php/iterators",
+    "name": "bermudaphp/iterator",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Lobster\\Iterators\\": "src/"
+            "Bermuda\\Iterator\\": "src/"
         }
     },
     "require": {
-        "php": ">= 7.2.0"
+        "php": ">= 7.4"
     }
 }
