--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,11 @@
     "autoload": {
         "psr-4": {
             "Bermuda\\Iterator\\": "src/"
-        }
+        },
+        "files": ["src\\functions.php"]
     },
     "require": {
-        "php": ">= 7.4",
+        "php": "^7.4 || ~8.0",
         "bermudaphp/arrayable": "^1.0"
     }
 }
