--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     },
     "require": {
         "php": "^7.4 || ~8.0",
-        "bermudaphp/arrayable": "^1.0"
+        "bermudaphp/arrayable": "^1.0",
+        "psr/http-message": "^1.0.1"
     }
 }
