--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     },
     "require": {
-        "php": "^8.0|^8.1",
+        "php": "^8.4",
         "bermudaphp/arrayable": "^1.0",
         "psr/http-message": "^1.0.1"
     }
